--- a/cart.html
+++ b/cart.html
@@ -4,11 +4,11 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <title>eMercado - Todo lo que busques está aquí</title>
-
+  <!-- Icons-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
@@ -75,65 +75,106 @@
       </ul>
     </div>
   </nav>
-  <div class="container px-4 py-4 mt-3 border rounded shadow">
-    <h1 class="text-center">Mi carrito</h1>
+
+  <div class="container px-4 py-4 my-3 border rounded shadow">
+    <div class="text-center p-3">
+      <h2 class="font-weight-bold">Mi Carrito</h2>
+    </div>
 
     <!--Here is the info of the cart, the products and the price-->
     <div id="divCarrito" class="p-3">
 
-      <div class="">
-        <div class="row">
+      <div class="row">
 
-          <!-- Items in the cart -->
-          <div id="cartArticles" class="col-12 col-lg-8 py-3 pr-4 border rounded shadow-sm mr-lg-4"></div>
+        <!-- Items in the cart -->
+        <div class="col-12 col-lg-7 mr-lg-4 p-0">
+          <div id="cartArticles" class="border rounded shadow-sm py-2 px-4"></div>
+        </div>
 
-          <!-- Subtotal and total price -->
-          <div class="col border rounded shadow p-4 my-3 my-lg-0">
+        <!-- Subtotal and total price -->
+        <div class="col ml-lg-4 my-3 my-lg-0 px-0">
+          <div class="border rounded shadow p-4">
+            <!-- Shipping type selector-->
+            <div class="row align-items-center px-2">
+              <div class="form-group border w-100 rounded shadow-sm p-4">
+                <h5 class="font-weight-bold">Tipo de envío:</h5>
+                <div class="p-2">
+                  <div class="custom-control custom-radio my-2">
+                    <input type="radio" id="standard" name="shippingType" class="custom-control-input" value="5"
+                      checked>
+                    <label for="standard" class="px-2 custom-control-label">
+                      Standard (12-15 días) <span class="text-pink">+5%</span>
+                    </label>
+                  </div>
+                  <div class="custom-control custom-radio my-2">
+                    <input type="radio" id="express" name="shippingType" class="custom-control-input" value="7">
+                    <label for="express" class="px-2 custom-control-label">
+                      Express (5-8 días) <span class="text-pink">+7%</span>
+                    </label>
+                  </div>
+                  <div class="custom-control custom-radio my-2">
+                    <input type="radio" id="premium" name="shippingType" class="custom-control-input" value="15"
+                      required>
+                    <label for="premium" class="px-2 custom-control-label">
+                      Premium (2-5 días) <span class="text-pink">+15%</span>
+                    </label>
+                    <div class="invalid-feedback">
+                      Por favor, ingrese el tipo de envío.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            <!--Costs-->
+            <div class="row">
+              <div class="col">
+                <!--Subtotal-->
+                <div class="row align-items-center px-2">
+                  <h6 class="col-4">Subtotal:</h6>
+                  <h3 id="subtotal" class="col font-weight-bold text-right"></h3>
+                </div>
+                <!--Shipping cost-->
+                <div class="row align-items-center px-2">
+                  <h6 class="col-4">Costo de envío (<span id="shippingPriceInfo" class="text-pink">-</span>):</h6>
+                  <h3 id="shippingPrice" class="col font-weight-bold text-right">-</h3>
+                </div>
+                <hr>
+                <!--Total-->
+                <div class="row align-items-end px-2">
+                  <h5 class="col-4">Total:</h5>
+                  <h2 id="total" class="col font-weight-bold text-right">-</h2>
+                </div>
+              </div>
+            </div>
+
             <div class="row p-2">
               <!-- Button for selecting shipping method -->
-              <button type="button" class="btn btn-primary w-100 my-2" data-toggle="modal"
-                data-target="#shippingTypeModal">
+              <button type="button" class="btn btn-block btn-primary" data-toggle="modal" data-target="#shippingTypeModal">
                 Opciones de envío
               </button>
               <!-- Here is the shipping info -->
-              <div id="shippingInfo" class="m-2 w-100 border rounded shadow-sm"></div>
+              <div id="shippingInfo" class="my-3">
+                <div class="row align-items-center mx-0 p-2 rounded bg-light-pink">
+                  <p class="col mb-0 pl-1 text-center text-danger" style="font-size: 0.9em;">Ingrese la dirección del
+                    envío para poder confirmar la compra</p>
+                </div>
+              </div>
             </div>
-            <!--Subtotal-->
-            <div class="row align-items-center px-2">
-              <h6 class="col-4">Subtotal:</h6>
-              <h3 id="subtotal" class="col font-weight-bold text-right"></h3>
-            </div>
-            <!--Shipping cost-->
-            <div class="row align-items-center px-2">
-              <h6 class="col-4">Costo de envío (<span id="shippingPriceInfo" class="text-pink">-</span>):</h6>
-              <h3 id="shippingPrice" class="col font-weight-bold text-right">-</h3>
-            </div>
-            <hr>
-            <!--Total-->
-            <div class="row align-items-end px-2">
-              <h5 class="col-4">Total:</h5>
-              <h2 id="total" class="col font-weight-bold text-right">-</h2>
-            </div>
+            <!-- Confirm the buy -->
             <div class="row p-2 align-self-end">
-
-              <!-- Confirm the buy -->
-              <button type="button" id="confirmBuyBtn" class="btn btn-primary w-100 my-2" disabled>
+              <button type="button" id="confirmBuyBtn" class="btn btn-block btn-success" disabled>
                 Confirmar compra
               </button>
-              <div class="row align-items-center mx-0" id="buyBtnInfo">
-                <p class="col mb-0 pl-1 text-center text-danger" style="font-size: 0.9em;">Ingrese dirección y tipo de
-                  envío para confirmar la compra</p>
-              </div>
             </div>
           </div>
         </div>
       </div>
-
     </div>
 
     <!-- Modal shipping-->
-    <div class="modal fade" id="shippingTypeModal" tabindex="-1" role="dialog"
-      aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="shippingTypeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+      aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -145,65 +186,46 @@
           <div class="modal-body">
 
             <form id="shippingTypeForm" class="needs-validation" novalidate>
-              <div class="form-group d-flex row w-100 px-3 align-items-center">
+              <div class="form-group row w-100 px-3 align-items-center">
                 <label for="shippingAddressStreet" class="col-3 mb-0">Calle: </label>
-                <input type="text" name="shippingAddressStreet" id="shippingAddressStreet" class="col form-control"
+                <input type="text" name="shippingAddressStreet" id="shippingAddressStreet" class="col-9 form-control"
                   required>
-                <div class="invalid-feedback">
+                <div class="col-3"></div>
+                <div class="col invalid-feedback">
                   Por favor, ingrese la calle.
                 </div>
               </div>
-              <div class="form-group d-flex row w-100 px-3 align-items-center">
+              <div class="form-group row w-100 px-3 align-items-center">
                 <label for="shippingAddressNumber" class="col-3 mb-0">Número: </label>
-                <input type="text" name="shippingAddressNumber" id="shippingAddressNumber" class="col form-control"
+                <input type="text" name="shippingAddressNumber" id="shippingAddressNumber" class="col-9 form-control"
                   required>
-                <div class="invalid-feedback">
+                <div class="col-3"></div>
+                <div class="col invalid-feedback">
                   Por favor, ingrese el número de puerta.
                 </div>
               </div>
-              <div class="form-group d-flex row w-100 px-3 align-items-center">
+              <div class="form-group row w-100 px-3 align-items-center">
                 <label for="shippingAddressCorner" class="col-3 mb-0">Esquina: </label>
-                <input type="text" name="shippingAddressCorner" id="shippingAddressCorner" class="col form-control"
+                <input type="text" name="shippingAddressCorner" id="shippingAddressCorner" class="col-9 form-control"
                   required>
-                <div class="invalid-feedback">
+                <div class="col-3"></div>
+                <div class="col invalid-feedback">
                   Por favor, ingrese la esquina cercana.
                 </div>
               </div>
-              <div class="form-group d-flex row w-100 px-3 align-items-center">
+              <div class="form-group row w-100 px-3 align-items-center">
                 <label for="shippingCountry" class="col-3 mb-0">País: </label>
-                <input type="text" name="shippingCountry" id="shippingCountry" class="col form-control" required>
-                <div class="invalid-feedback">
+                <input type="text" name="shippingCountry" id="shippingCountry" class="col-9 form-control" required>
+                <div class="col-3"></div>
+                <div class="col invalid-feedback">
                   Por favor, ingrese el país del envío.
                 </div>
               </div>
-              <div class="form-group border rounded shadow-sm m-4 p-4">
-                <h4>Tipo de envío</h4>
-                <div class="custom-control custom-radio">
-                  <input type="radio" id="premium" name="shippingType" class="custom-control-input" value="15" required>
-                  <label for="premium" class="px-2 custom-control-label" style="font-size: 1.3em;">
-                    Premium (2-5 días) <span class="text-pink">+15%</span>
-                  </label>
-                </div>
-                <br>
-                <div class="custom-control custom-radio">
-                  <input type="radio" id="express" name="shippingType" class="custom-control-input" value="7">
-                  <label for="express" class="px-2 custom-control-label" style="font-size: 1.3em;">
-                    Express (5-8 días) <span class="text-pink">+7%</span>
-                  </label>
-                </div>
-                <br>
-                <div class="custom-control custom-radio">
-                  <input type="radio" id="standard" name="shippingType" class="custom-control-input" value="5">
-                  <label for="standard" class="px-2 custom-control-label" style="font-size: 1.3em;">
-                    Standard (12-15 días) <span class="text-pink">+5%</span>
-                  </label>
-                  <div class="invalid-feedback">
-                    Por favor, ingrese el tipo de envío.
-                  </div>
-                </div>
+              <hr>
+              <div class="d-flex justify-content-end">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <input type="submit" class="btn btn-primary mx-3 " value="Confirmar">
               </div>
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-              <input type="submit" class="btn btn-primary" value="Confirmar">
             </form>
 
           </div>
@@ -214,6 +236,17 @@
 
 
   </div>
+
+  <footer class="text-muted bg-light">
+    <div class="container">
+      <p class="float-right">
+        <a href="#">Volver arriba</a>
+      </p>
+      <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
+      <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
+    </div>
+  </footer>
+
   <div id="spinner-wrapper">
     <div class="lds-ring">
       <div></div>
