Ahora se puede elegir el método de pago

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
           function renderButton() {
             gapi.signin2.render('my-signin2', {
               'scope': 'profile email',
-              'longtitle': true,
+              'width': '250',
+              'longtitle': false,
               'theme': 'dark',
               'onsuccess': onSuccess,
               'onfailure': onFailure
