--- a/product-info.html
+++ b/product-info.html
@@ -65,9 +65,10 @@
     <div class="container px-5 py-4 mt-3 border rounded shadow">
       <div class="row p-3" id="productInfo"></div>
 
+      <div class="border-bottom my-3"></div>
 
       <!-- The comments and the related products -->
-      <div class="row justify-content-around my-4">
+      <div class="row justify-content-around">
 
         <!--Here is the comments section-->
         <div class="col-12 col-lg-8 my-3 border rounded shadow">
