--- a/categories.html
+++ b/categories.html
@@ -84,7 +84,7 @@
         <div class="col-12 col-lg-6">
           <div class="d-flex row justify-content-end">
             <div class="col">
-              <p class="text-right">Cant.</p>
+              <p class="text-right my-2">Cant.</p>
             </div>
             <div class="col">
               <input class="form-control" type="number" placeholder="min." min="0" id="rangeFilterCountMin">
