--- a/products.html
+++ b/products.html
@@ -65,7 +65,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col text-right">
+        <div class="col text-center text-lg-right">
           <div class="btn-group btn-group-toggle my-2" data-toggle="buttons">
             <label class="btn btn-light active" id="sortByRelevance">
               <input type="radio" name="options" autocomplete="off"><i
@@ -82,8 +82,8 @@
       </div>
       <div class="row justify-content-center">
         <input type="search" placeholder="Buscar..." id="searchProductBar" class="form-control col-10 col-md-6 my-2">
-        <div class="col-md-6 col-sm-12 my-md-2 container">
-          <div class="row container">
+        <div class="col-md-6 col-sm-12 my-md-2">
+          <div class="row">
             <div class="col">
               <p class="font-weight-normal text-right my-2">Precio</p>
             </div>
@@ -93,7 +93,7 @@
             <div class="col">
               <input class="form-control" type="number" placeholder="máx." min="0" id="rangeFilterCountMax">
             </div>
-            <div class="col-3 p-0">
+            <div class="col">
               <div class="btn-group" role="group">
                 <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
                 <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
